.tanzu/config/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: spring-ai-demo-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: spring-ai-demo
    healthcheck.gslb.tanzu.vmware.com/path: /actuator/health
    healthcheck.gslb.tanzu.vmware.com/port: "80"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-gateway
      sectionName: https-spring-ai-demo #use https for TLS
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: spring-ai-demo
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
